# ragAI-app

./: custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/10aa84f7-42c5-4cbf-9bc0-d547b9e5abcf/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/10aa84f7-42c5-4cbf-9bc0-d547b9e5abcf/payload_index/: IDENTITY  LOG  MANIFEST-000009  MANIFEST-000017
qdrant_storage/collections/docs/0/segments/73f01a2e-9616-4703-96e1-54ed693fe731/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/73f01a2e-9616-4703-96e1-54ed693fe731/payload_index/: IDENTITY  LOG  MANIFEST-000009  MANIFEST-000017
qdrant_storage/collections/docs/0/segments/afd1511d-6ae8-4c89-b61b-1578e6c8fe50/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/afd1511d-6ae8-4c89-b61b-1578e6c8fe50/payload_index/: IDENTITY  LOG  MANIFEST-000009  MANIFEST-000017
qdrant_storage/collections/docs/0/segments/bebd9320-fc58-439c-b227-1498d7787b7f/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/d07a46e7-915c-4839-89e0-0276d3440f57/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/f4749ded-f7ca-477c-a8c4-624cc58cb22f/: mutable_id_tracker.mappings
(+12 files in other folders)
